# spotify-web-rust

./: Cargo.toml  README.md
src/: main.rs  playing.rs
src/playing/: access_token.rs
