[package]
name = "spot_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde_json = "1.0.113"
serde = { version = "1", features = ["derive"] }
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json"] }
base64 = "0.21.7"